--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-query": "^5.83.0",
     "axios": "^1.10.0",
     "cookie": "^1.0.2",
+    "firebase": "^12.0.0",
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
